--- a/assets/css/horloge.css
+++ b/assets/css/horloge.css
@@ -1,3 +1,13 @@
+/* GENERAL SETTING */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+}
+main{
+    padding-top: 100px;
+}
 
 /* HEADER */
 
