--- a/assets/css/minuteur.css
+++ b/assets/css/minuteur.css
@@ -1,11 +1,12 @@
+/* GENERAL SETTING */
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+}
+main{
+    padding-top: 100px;
 }
 
 
