--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,7 +50,9 @@ header {
 }
 
 .accueil{
-    background-image: url(./assets/medias/spirale.jpg);
+    background-image: url(../medias/spirale.jpg);
+    background-size: 100%;
+    background-attachment: fixed;
 }
 
 h1{
