--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,7 +14,7 @@ main{
 
 header {
     background-color: #333;
-    padding: 10px 0;
+    padding: 10px 20px;
     position: fixed;
     top: 0;
     left: 0;
@@ -31,17 +31,17 @@ header {
 }
 
 .Navbar li {
-    margin: 0 150px;
+    margin: 0 80px;
 }
 
 .Navbar a {
     display: block;
-    padding: 10px 20px;
+    padding: 10px 15px;
     text-decoration: none;
     color: white;
     background-color: #444;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 15px;
     justify-content: space-between;
 }
 
@@ -49,13 +49,13 @@ header {
     background-color: #555;
 }
 
-.accueil{
+.fond{
     background-image: url(../medias/spirale.jpg);
     background-size: 100%;
     background-attachment: fixed;
 }
 
 h1{
-    color: blue;
+    color: white;
 }
 
