--- a/assets/css/minuteur.css
+++ b/assets/css/minuteur.css
@@ -53,6 +53,7 @@ header {
     background-image: url(../medias/spirale.jpg);
     background-size: 100%;
     background-attachment: fixed;
+    color: white;
 }
 
 
